--- a/rdagent/scenarios/qlib/factor_experiment_loader/prompts.yaml
+++ b/rdagent/scenarios/qlib/factor_experiment_loader/prompts.yaml
@@ -6,7 +6,7 @@ extract_factors_system: |-
 
     user will treat your factor name as key to store the factor, don't put any interaction message in the content. Just response the output without any interaction and explanation.
     All names should be in English.
-    Respond with your analysis in JSON format. The JSON schema should include:
+    Respond with your analysis in pure JSON format. The JSON schema should include. Note, output must not include any prefix or postfix like ```json:
     {
         "summary": "The summary of this report",
         "factors": {
@@ -22,7 +22,7 @@ extract_factors_system: |-
 extract_factors_follow_user: |-
     Please continue extracting the factors. Please ignore factors appeared in former messages. If no factor is found, please return an empty dict.
     Notice: You should not miss any factor in the report! Some factors might appear several times in the report. You can repeat them to avoid missing other factors.
-    Respond with your analysis in JSON format. The JSON schema should include:
+    Respond with your analysis in pure JSON format. The JSON schema should include. Note, output must not include any prefix or postfix like ```json:
     {
         "factors": {
             "Name of factor 1": "Description to factor 1",
@@ -45,7 +45,7 @@ extract_factor_formulation_system: |-
 
     Please expand the formulation to use the source data I have provided. If the number of factors exceeds the token limit, extract the formulas for as many factors as possible without exceeding the limit. Ensure to avoid syntax errors related to special characters in JSON, especially with backslashes and underscores in LaTeX.
 
-    Provide your analysis in JSON format, using the following schema:
+    Provide your analysis in JSON format, using the following schema. Note, output must not include any prefix or postfix like ```json:
     {
         "factor name 1": {
             "formulation": "latex formulation of factor 1",
@@ -89,7 +89,7 @@ classify_system: |-
 
     If the document meets all the above conditions, please return 1; otherwise, please return 0.
 
-    Please respond with your decision in JSON format. Just respond the output json string without any interaction and explanation.
+    Please respond with your decision in JSON format without any prefix or postfix like '''json. Just respond the output json string without any interaction and explanation.
     The JSON schema should include:
     {
         "class": 1
@@ -124,7 +124,7 @@ factor_viability_system: |-
     Notice, you can just return part of the factors due to token limit. Your factor name should be the same as the user's factor name.
 
     Please respond with your decision in JSON format. Just respond the output json string without any interaction and explanation.
-    The JSON schema should include:
+    The JSON schema should include without any prefix or postfix like '''json:
     {
         "Name to factor 1":
         {
@@ -164,7 +164,7 @@ factor_relevance_system: |-
     Notice, you can just return part of the factors due to token limit. Your factor name should be the same as the user's factor name.
 
     Please respond with your decision in JSON format. Just respond the output json string without any interaction and explanation.
-    The JSON schema should include:
+    The JSON schema should include, without any prefix or postfix like '''json:
     {
         "Name to factor 1":
         {
